<resources>
    <string name="app_name">Wawasan</string>
    <string name="orderNumber">Order Number</string>
    <string name="orderMerchant">Ordered From</string>
    <string name="foodInTime">In-Time</string>
    <string name="foodInDate">In-Date</string>
    <string name="leaveAtTheGate">Leave at the gate</string>
    <string name="dropAtDoor">Drop at door</string>
    <string name="societyName">Society Name</string>
    <string name="exitGates">No. of exit gates</string>
    <string name="entryGates">No. of entry gates</string>
    <string name="flats">No. of flats</string>
    <string name="communityRegister">Community Registration</string>

    <string name="errorSelectSpinner">Please select a appropiate role</string>
    <string name="errorlogin">Please enter your email role and password correctly</string>
    <string name="errorSelectImage">Please select a image of your\'s</string>
    <string name="errorImageupload">Failed to upload your image, Please try again</string>
    <string name="imageUploadSuccess">Image uploaded successfully</string>
    <string name="passMismatch">Email and Password didnt match</string>
    <string name="dateFormatWrong">Please enter date in correct format</string>
    <string name="timeFormatWrong">Please enter time in correct format</string>

    <string name="communityCollectionName">community</string>
    <string name="adminCollectionName">admin</string>
    <string name="visitorsCollectionName">visitors</string>
    <string name="ownersCollectionName">owner</string>
    <string name="securityCollectionName">securityGaurd</string>
    <string name="maidCollectionName">maid</string>
    <string name="foodDelCollectionName">foodDelivery</string>

    <string-array name="roleArray">
        <item>--Select--</item>
        <item>Owner</item>
        <item>Admin</item>
        <item>Security Gaurd</item>
    </string-array>

    <string name="title_activity_owner_dashboard">OwnerDashboard</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>
    <string name="title_activity_admin_dashboard">AdminDashboard</string>
</resources>
