<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".CommunityRegistration">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_margin="5dp"
        android:orientation="vertical"
        tools:layout_editor_absoluteX="5dp"
        tools:layout_editor_absoluteY="5dp">

        <TextView
            android:id="@+id/textView"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:layout_marginBottom="20dp"
            android:fontFamily="sans-serif"
            android:text="@string/communityRegister"
            android:textAlignment="center"
            android:textColor="@android:color/holo_red_dark"
            android:textSize="24sp" />

        <EditText
            android:id="@+id/societyName"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:ems="10"
            android:hint="@string/societyName"
            android:inputType="textPersonName|text" />

        <EditText
            android:id="@+id/communityAddress1"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:ems="10"
            android:hint="Address Line 1"
            android:inputType="textPersonName|text" />

        <EditText
            android:id="@+id/communityAddress2"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:ems="10"
            android:hint="Address Line 2"
            android:inputType="textPersonName|text" />

        <EditText
            android:id="@+id/societyFlats"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:ems="10"
            android:hint="@string/flats"
            android:inputType="number" />

        <EditText
            android:id="@+id/communityEntryGates"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:ems="10"
            android:hint="@string/entryGates"
            android:inputType="number" />

        <EditText
            android:id="@+id/communityExitGates"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:ems="10"
            android:hint="@string/exitGates"
            android:inputType="number" />

        <EditText
            android:id="@+id/communityPhoneNumber"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:ems="10"
            android:hint="Phone Number"
            android:inputType="phone" />

        <Button
            android:id="@+id/registerCommunity"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:text="Register Community" />

    </LinearLayout>
</android.support.constraint.ConstraintLayout>